# robotic-task-fsm

./: .gitignore  CMakeLists.txt  README.md
include/fsm/: fsm.hpp
src/: fsm.cpp
test/: test.cpp
